# free-premonoidal

./: README.md  free-categories.cabal  free-premonoidal.cabal  stack.yaml
src/: Consume.hs  Divide.hs  FreeBifCategory.hs  FreeCartesian.hs  FreeCategories.hs  FreeCategory.hs  FreePremonoidal.hs  FreeSemicartesian.hs  FreeSymmetric.hs  KnownLength.hs  List.hs  Observe.hs  Premonoidal.hs  Tuple.hs
src/Control/Category/: Free.hs  Premonoidal.hs
src/Control/Category/Premonoidal/: Free.hs
src/Data/Graph/: Dag.hs
src/TypeLevel/: Axiom.hs  List.hs  MultiSet.hs
