name:                free-premonoidal
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain
author:              Samuel GeÌlineau
maintainer:          gelisam+github@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Category.Free
                     , Control.Category.Premonoidal
                     , Control.Category.Premonoidal.Free
                     , TypeLevel.Axiom
                     , TypeLevel.List
                     , TypeLevel.MultiSet

  -- other-modules:       
  build-depends:       base
                     , constraints
                     , typelevel-rewrite-rules
  hs-source-dirs:      src
  ghc-options: -W -Wall
  default-language:    Haskell2010
